# quantumstockanalyzer

./: .gitignore  LICENSE  README.md  app.py  debug_news.py  main.py  pyproject.toml  verify_data.py  verify_news_ddg.py
src/: analyzer.py  data_fetcher.py
